Update Final; Nier_Automata By AbdelBouklech.theme.css

--- a/Theme css/Final; Nier_Automata By AbdelBouklech.theme.css
+++ b/Theme css/Final; Nier_Automata By AbdelBouklech.theme.css
@@ -59,7 +59,7 @@ body::after,
 .invite-modal .invite-splash,
 .radio-theme.light label,
 .radio-theme.dark label{
-    background-image: url(https://cloud.githubusercontent.com/assets/25139140/22176589/4db97a20-e00e-11e6-8317-4ac3f7a9da04.jpg) !important; /* IMPORTANT: Link must be HTTP! */
+    background-image: url(https://images8.alphacoders.com/836/thumb-1920-836343.png) !important; /* IMPORTANT: Link must be HTTP! */
 }
 /*
 --------------------------------------------------------------------------------------------------------------------------------------------
